--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./ --out-dir build"
+    "build": "parcel build src/index.html --public-url ./ --out-dir build --no-source-maps"
   },
   "repository": {
     "type": "git",
