--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "prebuild": "rm -rf docs",
-    "build": "parcel build src/index.html --public-url ./ --out-dir docs --no-source-maps",
-    "clean": "rm -rf dist .cache"
+    "clean": "rm -rf dist .cache docs",
+    "prebuild": "npm run clean",
+    "build": "parcel build src/index.html --public-url ./ --out-dir docs --no-source-maps"
   },
   "repository": {
     "type": "git",
