--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
+    "dev": "npm start",
     "clean": "rm -rf dist .cache docs",
     "prebuild": "npm run clean",
     "build": "parcel build src/index.html --public-url ./ --out-dir docs --no-source-maps"
